--- a/package.json
+++ b/package.json
@@ -1,26 +1,46 @@
 {
-  "name": "ecars",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": " next dev -p 80",
+    "start": " next build &&  next start -p 80  ",
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.4"
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
+    "@kommunicate/kommunicate-chatbot-plugin": "^0.0.7",
+    "@mui/material": "^5.14.18",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.6",
+    "@react-pdf/renderer": "^3.1.14",
+    "@reduxjs/toolkit": "^1.9.7",
+    "body-parser": "^1.20.2",
+    "next": "14.0.1",
+    "next-images": "^1.8.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-google-charts": "^4.0.1",
+    "react-hot-toast": "^2.4.1",
+    "react-redux": "^8.1.3",
+    "react-to-print": "^2.14.15",
+    "redux-persist": "^6.0.0",
+    "styled-components": "^6.1.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.0.1",
+    "daisyui": "^4.0.4",
     "eslint": "^8",
-    "eslint-config-next": "14.2.4"
+    "eslint-config-next": "14.0.1",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
